; ModuleID = '/home/carl/AnghaBench/lede/target/linux/generic/files/drivers/net/phy/extr_rtl8367.c_rtl8367_remove.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/generic/files/drivers/net/phy/extr_rtl8367.c_rtl8367_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.rtl8366_smi = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @rtl8367_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtl8367_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.rtl8366_smi*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.rtl8366_smi* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.rtl8366_smi* %5, %struct.rtl8366_smi** %3, align 8
  %6 = load %struct.rtl8366_smi*, %struct.rtl8366_smi** %3, align 8
  %7 = icmp ne %struct.rtl8366_smi* %6, null
  br i1 %7, label %8, label %17

8:                                                ; preds = %1
  %9 = load %struct.rtl8366_smi*, %struct.rtl8366_smi** %3, align 8
  %10 = call i32 @rtl8367_switch_cleanup(%struct.rtl8366_smi* %9)
  %11 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %12 = call i32 @platform_set_drvdata(%struct.platform_device* %11, i32* null)
  %13 = load %struct.rtl8366_smi*, %struct.rtl8366_smi** %3, align 8
  %14 = call i32 @rtl8366_smi_cleanup(%struct.rtl8366_smi* %13)
  %15 = load %struct.rtl8366_smi*, %struct.rtl8366_smi** %3, align 8
  %16 = call i32 @kfree(%struct.rtl8366_smi* %15)
  br label %17

17:                                               ; preds = %8, %1
  ret i32 0
}

declare dso_local %struct.rtl8366_smi* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @rtl8367_switch_cleanup(%struct.rtl8366_smi*) #1

declare dso_local i32 @platform_set_drvdata(%struct.platform_device*, i32*) #1

declare dso_local i32 @rtl8366_smi_cleanup(%struct.rtl8366_smi*) #1

declare dso_local i32 @kfree(%struct.rtl8366_smi*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
